feat: add initial HTML structure

--- a/index.html
+++ b/index.html
@@ -17,6 +17,96 @@
     <link rel="stylesheet" href="./css/styles.css">
   </head>
 
-  <body></body>
+  <body>
+    <header id="main-banner">
+      <div class="nav-container">
+        <a href="#" class="brand">
+          <i class="fas fa-brain"></i> Agency
+        </a>
+        <nav>
+          <ul class="nav-container-navbar">
+            <li>
+              <a href="#">Home</a>
+            </li>
+            <li>
+              <a href="#">Serviços</a>
+            </li>
+            <li>
+              <a href="#">Contato</a>
+            </li>
+            <li>
+              <a href="#" class="btn btn-primary">Entrar</a>
+            </li>
+            <li>
+              <a href="#" class="btn">Registrar</a>
+            </li>
+          </ul>
+        </nav>
+        <i class="fas fa-bars"></i>
+      </div>
+    </header>
+    <main class="services-container">
+      <h2>O que fazemos</h2>
+      <div class="services-card-container">
+        <div class="services-card">
+          <i class="fab fa-buffer"></i>
+          <h3>Desenvolvimento full stack</h3>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rem aut
+            sapiente eos, nam dignissimos sit nisi repellat dicta. Fugit eos sed
+            quod dignissimos eligendi. Quibusdam deserunt quas fugit saepe odio.
+          </p>
+        </div>
+        <div class="services-card">
+          <i class="fab fa-buffer"></i>
+          <h3>Desenvolvimento full stack</h3>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rem aut
+            sapiente eos, nam dignissimos sit nisi repellat dicta. Fugit eos sed
+            quod dignissimos eligendi. Quibusdam deserunt quas fugit saepe odio.
+          </p>
+        </div>
+        <div class="services-card">
+          <i class="fab fa-buffer"></i>
+          <h3>Desenvolvimento full stack</h3>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rem aut
+            sapiente eos, nam dignissimos sit nisi repellat dicta. Fugit eos sed
+            quod dignissimos eligendi. Quibusdam deserunt quas fugit saepe odio.
+          </p>
+        </div>
+        <div class="services-card">
+          <i class="fab fa-buffer"></i>
+          <h3>Desenvolvimento full stack</h3>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rem aut
+            sapiente eos, nam dignissimos sit nisi repellat dicta. Fugit eos sed
+            quod dignissimos eligendi. Quibusdam deserunt quas fugit saepe odio.
+          </p>
+        </div>
+        <div class="services-card">
+          <i class="fab fa-buffer"></i>
+          <h3>Desenvolvimento full stack</h3>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rem aut
+            sapiente eos, nam dignissimos sit nisi repellat dicta. Fugit eos sed
+            quod dignissimos eligendi. Quibusdam deserunt quas fugit saepe odio.
+          </p>
+        </div>
+        <div class="services-card">
+          <i class="fab fa-buffer"></i>
+          <h3>Desenvolvimento full stack</h3>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rem aut
+            sapiente eos, nam dignissimos sit nisi repellat dicta. Fugit eos sed
+            quod dignissimos eligendi. Quibusdam deserunt quas fugit saepe odio.
+          </p>
+        </div>
+      </div>
+      <a href="#" class="btn btn-primary btn-rounded">
+        Veja todos os serviços
+      </a>
+    </main>
+  </body>
 
 </html>
