feat: add more HTML structure

--- a/index.html
+++ b/index.html
@@ -107,6 +107,154 @@
         Veja todos os serviços
       </a>
     </main>
+    <div class="jobs-container">
+      <h2>Alguns de nossos trabalhos</h2>
+      <div class="jobs-list">
+        <div class="first-job" id="job-1">
+          <div class="job-card-cover">
+            <p class="job-card-title">Projeto 1</p>
+            <p class="job-card-description">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita,
+              nesciunt. Ea, reiciendis nobis aperiam sint rerum repellat
+              voluptatibus provident, voluptates error repellendus minus
+              corporis possimus, illo quo itaque recusandae ad?
+            </p>
+          </div>
+        </div>
+        <div class="other-jobs-container">
+          <div class="job-card" id="job-2">
+            <div class="job-card-cover">
+              <p class="job-card-title">Projeto 1</p>
+              <p class="job-card-description">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Expedita,
+                nesciunt. Ea, reiciendis nobis aperiam sint rerum repellat
+                voluptatibus provident, voluptates error repellendus minus
+                corporis possimus, illo quo itaque recusandae ad?
+              </p>
+            </div>
+          </div>
+          <div class="job-card" id="job-3">
+            <div class="job-card-cover">
+              <p class="job-card-title">Projeto 1</p>
+              <p class="job-card-description">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Expedita,
+                nesciunt. Ea, reiciendis nobis aperiam sint rerum repellat
+                voluptatibus provident, voluptates error repellendus minus
+                corporis possimus, illo quo itaque recusandae ad?
+              </p>
+            </div>
+          </div>
+          <div class="job-card" id="job-4">
+            <div class="job-card-cover">
+              <p class="job-card-title">Projeto 1</p>
+              <p class="job-card-description">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Expedita,
+                nesciunt. Ea, reiciendis nobis aperiam sint rerum repellat
+                voluptatibus provident, voluptates error repellendus minus
+                corporis possimus, illo quo itaque recusandae ad?
+              </p>
+            </div>
+          </div>
+          <div class="job-card" id="job-5">
+            <div class="job-card-cover">
+              <p class="job-card-title">Projeto 1</p>
+              <p class="job-card-description">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Expedita,
+                nesciunt. Ea, reiciendis nobis aperiam sint rerum repellat
+                voluptatibus provident, voluptates error repellendus minus
+                corporis possimus, illo quo itaque recusandae ad?
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <footer>
+      <div class="footer-container">
+        <div class="footer-desc-container">
+          <h3 class="footer-title">Agency</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis
+            sequi dolor amet quisquam, ad numquam, quibusdam iste ipsam officia,
+            nihil laudantium labore magni vitae necessitatibus eum eligendi.
+            Veritatis, vero iusto!
+          </p>
+        </div>
+        <div class="footer-links-container">
+          <div class="footer-links-container-list">
+            <p class="footer-title">Links</p>
+            <ul>
+              <li>
+                <a href="#">Base de conhecimentos</a>
+              </li>
+              <li>
+                <a href="#">Trabalhe Conosco</a>
+              </li>
+              <li>
+                <a href="#">Últimos Projetos</a>
+              </li>
+              <li>
+                <a href="#">Política de Privacidade</a>
+              </li>
+              <li>
+                <a href="#">Contato</a>
+              </li>
+            </ul>
+          </div>
+          <div class="footer-links-container-list">
+            <p class="footer-title">Links</p>
+            <ul>
+              <li>
+                <a href="#">Base de conhecimentos</a>
+              </li>
+              <li>
+                <a href="#">Trabalhe Conosco</a>
+              </li>
+              <li>
+                <a href="#">Últimos Projetos</a>
+              </li>
+              <li>
+                <a href="#">Política de Privacidade</a>
+              </li>
+              <li>
+                <a href="#">Contato</a>
+              </li>
+            </ul>
+          </div>
+          <div class="footer-links-container-list">
+            <p class="footer-title">Links</p>
+            <ul>
+              <li>
+                <a href="#">Base de conhecimentos</a>
+              </li>
+              <li>
+                <a href="#">Trabalhe Conosco</a>
+              </li>
+              <li>
+                <a href="#">Últimos Projetos</a>
+              </li>
+              <li>
+                <a href="#">Política de Privacidade</a>
+              </li>
+              <li>
+                <a href="#">Contato</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="footer-copyright-container">
+          <p>&copy; <span class="year"></span> Agency</p>
+          <p>A melhor agência web para seus projetos</p>
+        </div>
+      </div>
+    </footer>
+    <script>
+      document.querySelector('.year').textContent = new Date().getFullYear();
+    </script>
   </body>
 
 </html>
