--- a/index.html
+++ b/index.html
@@ -44,6 +44,13 @@
         </nav>
         <i class="fas fa-bars"></i>
       </div>
+      <div class="title-container">
+        <h2>Nós desenvolvemos</h2>
+        <h1>Poderosas experiências</h1>
+        <a href="#" class="btn btn-primary btn-rounded">
+          Fazer Orçamento
+        </a>
+      </div>
     </header>
     <main class="services-container">
       <h2>O que fazemos</h2>
