--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
           </p>
         </div>
         <div class="services-card">
-          <i class="fab fa-buffer"></i>
-          <h3>Desenvolvimento full stack</h3>
+          <i class="fas fa-bolt"></i>
+          <h3>Sites leves e rápidos</h3>
           <p>
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rem aut
             sapiente eos, nam dignissimos sit nisi repellat dicta. Fugit eos sed
@@ -74,8 +74,8 @@
           </p>
         </div>
         <div class="services-card">
-          <i class="fab fa-buffer"></i>
-          <h3>Desenvolvimento full stack</h3>
+          <i class="fas fa-cart-plus"></i>
+          <h3>E-commerces</h3>
           <p>
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rem aut
             sapiente eos, nam dignissimos sit nisi repellat dicta. Fugit eos sed
@@ -83,8 +83,8 @@
           </p>
         </div>
         <div class="services-card">
-          <i class="fab fa-buffer"></i>
-          <h3>Desenvolvimento full stack</h3>
+          <i class="fas fa-chart-line"></i>
+          <h3>SEO</h3>
           <p>
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rem aut
             sapiente eos, nam dignissimos sit nisi repellat dicta. Fugit eos sed
@@ -92,8 +92,8 @@
           </p>
         </div>
         <div class="services-card">
-          <i class="fab fa-buffer"></i>
-          <h3>Desenvolvimento full stack</h3>
+          <i class="fas fa-chess-pawn"></i>
+          <h3>Estratégias de Marketing</h3>
           <p>
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rem aut
             sapiente eos, nam dignissimos sit nisi repellat dicta. Fugit eos sed
@@ -101,8 +101,8 @@
           </p>
         </div>
         <div class="services-card">
-          <i class="fab fa-buffer"></i>
-          <h3>Desenvolvimento full stack</h3>
+          <i class="fas fa-cloud"></i>
+          <h3>Hospedagem AWS/Azure</h3>
           <p>
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rem aut
             sapiente eos, nam dignissimos sit nisi repellat dicta. Fugit eos sed
